updates to appointments workflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "fullwidth",
         "Hellow",
         "jeremymyers",
+        "mcpressure",
         "workit",
         "Worldie",
         "zaydek"
