--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
         "Appt",
+        "arrowless",
         "fullwidth",
         "Hellow",
+        "hoverable",
         "jeremymyers",
         "mcpressure",
+        "vcentered",
         "workit",
         "Worldie",
         "zaydek"
