--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "hoverable",
         "jeremymyers",
         "mcpressure",
+        "tokenless",
         "vcentered",
         "workit",
         "Worldie",
